# wolkenwalze-plugin-sdk-python

./: .gitignore  README.md  example.yaml  example_plugin.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: example_plugin.py  test_plugin.py
src/wolkenwalze_plugin_sdk/: jsonschema.py  plugin.py  resolver.py  schema.py  test_jsonschema.py  test_plugin.py  test_resolver.py  test_schema.py  validation.py
